--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,19 +15,13 @@
     <header>
         <span>
             <div id="squares">
-               &#11200;
-               &#11200;
-               &#11200; <br>
-               &#11200;
-               &#11200;
-               &#11200; <br>
-               &#11200;
-               &#11200;
-               &#11200;
+                <i class="fa-solid fa-table-cells"></i>
            </div>
             Speaker view
         </span>
-        <div></div>
+        <span id="x-arrow">
+            <i class="fa-solid fa-maximize"></i>
+        </span>
     </header>
     
     <main>
@@ -34,7 +29,35 @@
             <div class="row">
                 <div class="col">
                     <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card pos-rel">
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card pos-rel">
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card pos-rel">
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card pos-rel">
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <div class="card pos-rel">
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
                     </div>
                 </div>
                 <div class="col">
@@ -230,7 +253,7 @@
             <div class="row">
                 <div class="col">
                     <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
                     </div>
                 </div>
                 <div class="col">
@@ -250,35 +273,7 @@
                 </div>
                 <div class="col">
                     <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col">
-                    <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card pos-rel">
-                        <span>Pinco Pallo</span>
+                        <span><i class="fa-solid fa-microphone-slash"></i>  Pinco Pallo</span>
                     </div>
                 </div>
             </div>
@@ -318,7 +313,7 @@
         <div class="col1">
             <div class="cont1">
             <div class="icon">
-                <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                <i class="fa-solid fa-microphone" style="color: #ffffff;"></i>
             </div>
             <div class="text_icon"> Mute </div> 
             </div>
@@ -327,7 +322,7 @@
 
             <div class="cont1">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 576 512"><style>svg{fill:#ffffff}</style><path d="M0 128C0 92.7 28.7 64 64 64H320c35.3 0 64 28.7 64 64V384c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V128zM559.1 99.8c10.4 5.6 16.9 16.4 16.9 28.2V384c0 11.8-6.5 22.6-16.9 28.2s-23 5-32.9-1.6l-96-64L416 337.1V320 192 174.9l14.2-9.5 96-64c9.8-6.5 22.4-7.2 32.9-1.6z"/></svg>
+                    <i class="fa-solid fa-video" style="color: #ffffff;"></i>
                 </div>
                 <div class="text_icon"> Stop video </div> 
                 </div>
@@ -339,28 +334,28 @@
 
              <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M112 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zm40 304V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V256.9L59.4 304.5c-9.1 15.1-28.8 20-43.9 10.9s-20-28.8-10.9-43.9l58.3-97c17.4-28.9 48.6-46.6 82.3-46.6h29.7c33.7 0 64.9 17.7 82.3 46.6l58.3 97c9.1 15.1 4.2 34.8-10.9 43.9s-34.8 4.2-43.9-10.9L232 256.9V480c0 17.7-14.3 32-32 32s-32-14.3-32-32V352H152z"/></svg>
+                    <i class="fa-solid fa-user-plus"></i>
                 </div>
                 <div class="text_icon"> invite </div> 
              </div>
 
              <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                    <i class="fa-solid fa-users"></i>
                 </div>
                 <div class="text_icon"> manage </div> 
              </div>
 
              <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                    <i class="fa-solid fa-chart-column"></i>
                 </div>
                 <div class="text_icon"> lorem  </div> 
              </div>
 
              <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                    <i style="color: green;" class="fa-solid fa-share-from-square"></i>
                 </div>
                 <div class="text_icon"> share </div> 
              </div>
@@ -369,28 +364,28 @@
 
             <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                    <i class="fa-solid fa-comment"></i>
                 </div>
                 <div class="text_icon"> dfgdxfg </div> 
              </div>
 
              <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                    <i class="fa-solid fa-record-vinyl"></i>
                 </div>
                 <div class="text_icon"> Mutgvxfe </div> 
              </div>
 
              <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                    <i class="fa-solid fa-table-cells-large"></i>
                 </div>
                 <div class="text_icon"> fvddxf </div> 
              </div>
 
              <div class="cont2b">
                 <div class="icon">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 384 512"><style>svg{fill:#ffffff}</style><path d="M192 0C139 0 96 43 96 96V256c0 53 43 96 96 96s96-43 96-96V96c0-53-43-96-96-96zM64 216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 89.1 66.2 162.7 152 174.4V464H120c-13.3 0-24 10.7-24 24s10.7 24 24 24h72 72c13.3 0 24-10.7 24-24s-10.7-24-24-24H216V430.4c85.8-11.7 152-85.3 152-174.4V216c0-13.3-10.7-24-24-24s-24 10.7-24 24v40c0 70.7-57.3 128-128 128s-128-57.3-128-128V216z"/></svg>
+                    <i class="fa-solid fa-ellipsis"></i>
                 </div>
                 <div class="text_icon"> vfvdf </div> 
              </div>
